Fix extra spacing

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@ h1 {
 
 .item-img {
   width: 100%;
+  display: block;
 }
 
 .caption {
